# sonic-o1-agent

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: code_checks.yml  docs.yml  integration_tests.yml  publish.yml  unit_tests.yml
api/: index.html
architecture/: index.html
configs/: agent_config.yaml
docs/: api.md  architecture.md  index.md  user_guide.md
scripts/: run_agent.py  run_agent_interactive.py  verify_setup.py
search/: search_index.json
slurm/: run_sonic_agent_native.sh
src/sonic_o1_agent/: __init__.py  api.py  cli.py
src/sonic_o1_agent/agents/: __init__.py  planner.py  planner_advanced.py  reasoner.py  reflection.py  sonic_agent.py
src/sonic_o1_agent/core/: __init__.py  audio_processor.py  multimodal_engine.py  multimodal_utils.py  video_processor.py
src/sonic_o1_agent/demo/static/: script.js  style.css
src/sonic_o1_agent/demo/templates/: index.html
src/sonic_o1_agent/models/: __init__.py  qwen_model.py
src/sonic_o1_agent/processors/: __init__.py  prompt_builder.py  temporal_index.py
src/sonic_o1_agent/utils/: __init__.py  segmenter.py
src/sonic_o1_agent/workflows/: __init__.py  graph.py  nodes.py  state.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_workflow.py
tests/unit/: test_multimodal_engine.py  test_planner.py  test_planner_advanced.py  test_prompt_builder.py
user_guide/: index.html
